# Condor

./: .editorconfig  .flake8  .gitignore  .prettierignore  .prettierrc.js  .tool-versions  Makefile  README.md  condor.code-workspace  cspell-extra-dictionary.txt  cspell.json  package.json  pnpm-lock.yaml
.husky/: pre-commit
apps/backend/: pyproject.toml
apps/backend/api/: __init__.py
apps/backend/tools/: save-openapi.py
apps/mobile/: README.md  pubspec.yaml
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
lib/fastapi-extensions/: pyproject.toml
lib/fastapi-extensions/griblet/: fastapi_extensions.py
tools/: depcheck.py
tools/openapi-generator/: generate.sh
