[tool.poetry]
name = "fastapi-extensions"
version = "1.0.0"
description = "FastAPI extensions."
authors = [ ]
license = "Proprietary"

[[tool.poetry.packages]]
include = "griblet"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"
black = "^24.4.0"
isort = "^5.13.2"

[tool.coverage.run]
branch = true
source = [ "griblet" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/lib/fastapi-extensions/html' --cov-report xml:'../../coverage/lib/fastapi-extensions/coverage.xml' --html='../../reports/lib/fastapi-extensions/unittests/html/index.html' --junitxml='../../reports/lib/fastapi-extensions/unittests/junit.xml'"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
